# neutros-fc

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
cmake/: CMakeToolChain.stm32f446.cmake
docs/: ARCHITECTURE.md
src/: CMakeLists.txt
src/comms/: CMakeLists.txt
src/comms/c2/: CMakeLists.txt  c2.c  c2.h  c2_types.h
src/comms/c2/include/: c2_types.h
src/comms/c2/src/: c2.c
src/comms/telemetry/: CMakeLists.txt
src/comms/telemetry/include/: telemetry.h
src/comms/telemetry/src/: telemetry.c
src/fc_main/: main.c
src/flight/actuators/motor/: CMakeLists.txt
src/flight/actuators/motor/include/: motor.h
src/flight/actuators/motor/src/: motor.c  pwm_motor.c  pwm_motor.h
src/flight/sensors/imu/: CMakeLists.txt
src/flight/sensors/imu/include/: imu.h  imu_types.h
src/flight/sensors/imu/src/: imu.c  (+2 more)
src/param/: CMakeLists.txt
src/param/static/: CMakeLists.txt  config.c  config.h
src/param/static/src/: config.c
src/system/: CMakeLists.txt
src/system/blackboard/: CMakeLists.txt  blackboard.c  blackboard_topic_ids.h  blackboard_topics.h
src/system/blackboard/include/: blackboard.h  blackboard_topic_ids.h
src/system/blackboard/src/: blackboard_topics.c
src/system/schedule/: scheduler.c  scheduler.h  scheduler_types.h  task.h
src/system/scheduler/: CMakeLists.txt
src/system/scheduler/include/: scheduler.h
src/system/scheduler/src/: scheduler.c  scheduler_types.h
src/system/services/: CMakeLists.txt
src/system/services/include/: i2c_servicer.h
src/system/services/src/: i2c_servicer.c
